--- a/CSS/styles.less
+++ b/CSS/styles.less
@@ -4,10 +4,21 @@
 	margin: 0px;
 }
 
-@themeBlue: #7e7fc0;
+@themeBlueColor: #7e7fc0;
+@largeFontSize: 28px;
+@whiteColor: #ffffff;
+@healthColor: rgba(146, 3, 3, 0.72);
+@commentBackgoundColor: #cccccc;
+@themeBlackColor: #1d1d1b;
+@overlayWhiteColor: rgba(255,255,255,0.5);
+@shadowColor: #6f6f6f;
 
 .u-ib {
     display: inline-block;
+}
+
+.u-text-center {
+	text-align: center;
 }
 
 .background {
@@ -15,14 +26,14 @@
 	height: 100vh;
 	width: 100vw;
 	min-width: 1200px;
-	min-height: 1000px;
+	min-height: 800px;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 	.page-wrapper {
 		width: 90vw;
 		margin: auto;
-		padding-top: 40px;
+		padding-top: 20px;
 	}
 }
 
@@ -32,18 +43,18 @@
 	justify-content: space-between;
 	.health-bar {
 	    width: 600px;
-	    height: 50px;
-	    border: 1px solid #ffffff;
+	    height: 35px;
+	    border: 1px solid @whiteColor;
 	    border-radius: 30px;
 	    overflow: hidden;
 		.left-health {
 		    height: 100%;
-		    background: rgba(146, 3, 3, 0.72);
+		    background: @healthColor;
 		}
 	}
 	.title{
-		font-size: 30px;
-	    color: #7e7fc0;
+		font-size: @largeFontSize;
+	    color: @themeBlueColor;
 	    font-weight: bold;
 	    padding: 5px 20px;
 	}
@@ -61,7 +72,8 @@
 	}
 
 	.character-image {
-		height: 400px;
+		height: 300px;
+	    margin-bottom: 30px;
 		img {
 		    max-width: 100%;
 		    max-height: 100%;
@@ -72,13 +84,13 @@
 
 .bottom-content {
     display: flex;
-    background: rgba(255, 255, 255, 0.5);
+    background: @overlayWhiteColor;
     justify-content: space-around;
     border-radius: 60px;
     text-align: center;
     padding: 10px;
 	.logo {
-	    height: 200px;
+	    height: 250px;
 	    width: 20%;
 	    img {
     	    height: 100%;
@@ -90,20 +102,51 @@
 	    flex-wrap: wrap;
 		.action-button {
 		    padding: 10px 30px;
-		    background: #1d1d1b;
-		    border-radius: 5px;
-		    margin: 6px;
-		    width: 45%;
-		    display: flex;
-		    flex-direction: column;
-		    justify-content: space-around;
-		    color: #fff;
-		    cursor: pointer;
+	        background: @themeBlackColor;
+	        border-radius: 5px;
+	        margin: 10px;
+	        width: 45%;
+	        flex-direction: column;
+	        color: @whiteColor;
+	        cursor: pointer;
+	        display: flex;
+	        justify-content: space-around;
 		}
 	}
 
 	.comentry-wrapper {
 	    width: 35%;
+	    .comments {
+	        height: 215px;
+	        overflow-y: scroll;
+		    .comment {
+		        background: @commentBackgoundColor;
+		        margin: 5px auto;
+		        padding: 10px;
+		        border-radius: 5px;
+		        text-align: left;
+		        .revert{
+		        	background: @themeBlackColor;
+    				color: @whiteColor;
+		        }
+		        .date {
+		        	margin-right: 10px;
+		        }
+		    }
+	    }
+	    .comentry-title {
+	        font-size: @largeFontSize;
+	    }
+	    .commentry-fallback {
+	        display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            height: 90%;
+            color: @themeBlackColor;
+            border: 1px dashed @themeBlackColor;
+            margin: 12px 0;
+            border-radius: 10px;
+	    }
 	}
 
 }
@@ -111,7 +154,7 @@
 
 .overlay {
     position: fixed;
-    background: rgba(255,255,255,0.72);
+    background: @overlayWhiteColor;
     top: 0;
     bottom: 0;
     left: 0;
@@ -120,13 +163,25 @@
     flex-direction: column;
     justify-content: space-around;
 	.overlay-message {
-	    background: #333;
+	    background: @themeBlackColor;
 	    width: 40%;
 	    margin: auto;
 	    padding: 40px;
-	    color: #fff;
+	    color: @whiteColor;
 	    border-radius: 20px 0px;
-	    font-size: 29px;
-	    box-shadow: 1px 2px 3px #6f6f6f;
+	    font-size: @largeFontSize;
+	    box-shadow: 1px 2px 3px @shadowColor;
+	}
+	.button-wrapper {
+	    display: flex;
+	    justify-content: space-around;
+	    margin-top: 25px;
+	}
+
+	.button-wrapper .action-button {
+	    background: @themeBlueColor;
+	    padding: 5px 50px;
+	    border-radius: 5px;
+	    cursor: pointer;
 	}
 }
