--- a/HTML/DragonFight/Templates/healthBar.html
+++ b/HTML/DragonFight/Templates/healthBar.html
@@ -1,6 +1,6 @@
 <div class="u-ib">
 	<div class="title">{{title}}</div>
 	<div class="health-bar">
-		<div class="u-ib left-health" style="width: {{health}}%"></div>
+		<div class="u-ib left-health" style="width: {{health}}%">{{health}}%</div>
 	</div>
 </div>
