--- a/CSS/DragonFight/healthBar.less
+++ b/CSS/DragonFight/healthBar.less
@@ -5,7 +5,7 @@
 	display: flex;
 	justify-content: space-between;
 	.health-bar {
-	    width: 600px;
+	    width: 40vw;
 	    height: 35px;
 	    border: 1px solid @whiteColor;
 	    border-radius: 30px;
